[project]
name = "actions-tools"
description = "A Typed Python GitHub Actions Tookit similar to actions/toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Shane" }]
classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = ["PyYAML"]
dynamic = ["version"]

[project.urls]
Changelog = "https://github.com/cssnr/actions-tools/releases"
Discord = "https://discord.gg/wXy6m2X8wY"
Documentation = "https://actions-tools.cssnr.com/"
Funding = "https://ko-fi.com/cssnr"
GitHub = "https://github.com/cssnr/actions-tools"
Homepage = "https://cssnr.com/"
Issues = "https://github.com/cssnr/actions-tools/issues"

[project.optional-dependencies]
github = ["PyGithub>=2,<3"]

[dependency-groups]
dev = [
  "PyGithub>=2,<3",
  "bandit>=1.9.2",
  "black>=25.12.0",
  "build>=1.3.0",
  "coverage>=7.13.1",
  "isort>=7.0.0",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
  "setuptools>=80.9.0",
  "tombi>=0.7.14",
  "toml-run>=0.0.2",
  "ty>=0.0.9",
  "types-PyYAML>=6.0.12.20250915",
  "validate-pyproject[all]>=0.24.1",
  "yamllint>=1.37.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Bandit
# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B105", "B107"]
assert_used = { skips = ["*test_*.py"] }

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = ["_version.py"]
source = ["src"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["src", "test"]
skip = [".venv", ".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
# ignore_missing_imports = true
exclude = [".venv"]

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = [".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]

# Setup Tools
[tool.setuptools.package-data]
actions = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "actions.__version__" }

# Scripts
# https://github.com/cssnr/toml-run
[tool.toml-run]
test = ["uv run coverage run -m pytest", "uv run coverage report -m"]
clean = "rm -rf dist"
build = "uv run python -m build"
predocs = "rm -rf .cache site"
docs = "zensical serve --open --dev-addr 0.0.0.0:8000"
docs-build = "zensical build --clean"
format = """
uv run black .
uv run isort -c .
uv run ruff format
uv run tombi format .
which prettier && prettier --write . || echo missing prettier
"""
lint = """
run bandit
run mypy
run ruff
run validate
run yamllint
which prettier && prettier --check . || echo missing prettier
uv run black --check .
uv run isort -c .
uv run tombi lint .
uv run ty check -v .
uv lock --check
"""
bandit = "uv run bandit -c pyproject.toml -r ."
mypy = "uv run mypy ."
ruff = "uv run ruff check ."
validate = "uv run validate-pyproject pyproject.toml"
yamllint = "uv run yamllint -c .github/yamllint.yaml ."
